handlers e run api

--- a/src/Actio.Api/appsettings.json
+++ b/src/Actio.Api/appsettings.json
@@ -4,5 +4,29 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "rabbitmq": {
+    "Username": "gwpfouzc",
+    "Password": "AKUPxtBs0MCJQop2ZhHDRVr1rXIxLVxK",
+    "VirtualHost": "gwpfouzc",
+    "Port": 5672,
+    "Hostnames": ["chimpanzee.rmq.cloudamqp.com"],
+    "RequestTimeout": "00:00:10",
+    "PublishConfirmTimeout": "00:00:01",
+    "RecoveryInterval": "00:00:10",
+    "PersistentDeliveryMode": true,
+    "AutoCloseConnection": true,
+    "AutomaticRecovery": true,
+    "TopologyRecovery": true,
+    "Exchange": {
+      "Durable": true,
+      "AutoDelete": true,
+      "Type": "Topic"
+    },
+    "Queue": {
+      "AutoDelete": true,
+      "Durable": true,
+      "Exclusive": true
+    }
+  }
 }
