--- a/src/Actio.Services.Activities/appsettings.json
+++ b/src/Actio.Services.Activities/appsettings.json
@@ -6,11 +6,11 @@
   },
   "AllowedHosts": "*",
   "rabbitmq": {
-    "Username": "guest",
-    "Password": "guest",
-    "VirtualHost": "/",
+    "Username": "gwpfouzc",
+    "Password": "AKUPxtBs0MCJQop2ZhHDRVr1rXIxLVxK",
+    "VirtualHost": "gwpfouzc",
     "Port": 5672,
-    "Hostnames": ["localhost"],
+    "Hostnames": ["chimpanzee.rmq.cloudamqp.com"],
     "RequestTimeout": "00:00:10",
     "PublishConfirmTimeout": "00:00:01",
     "RecoveryInterval": "00:00:10",
