adicionado mongo DB e criado repositorios

--- a/src/Actio.Services.Activities/appsettings.json
+++ b/src/Actio.Services.Activities/appsettings.json
@@ -5,6 +5,12 @@
     }
   },
   "AllowedHosts": "*",
+  "pass" : "96FE7jMbwu8DlPvV",
+  "mongo" : {
+    "connectionString" : "mongodb+srv://app:96FE7jMbwu8DlPvV@cluster0-pv66d.mongodb.net/test?retryWrites=true",
+    "database" : "Cluster0",
+    "seed" : true
+  },
   "rabbitmq": {
     "Username": "gwpfouzc",
     "Password": "AKUPxtBs0MCJQop2ZhHDRVr1rXIxLVxK",
