--- a/src/Actio.Api/appsettings.json
+++ b/src/Actio.Api/appsettings.json
@@ -5,6 +5,11 @@
     }
   },
   "AllowedHosts": "*",
+  "jwt" : {
+    "secretKey" : "KwPtBdfhEGxG8YSuYKTCxrAEAKrHrFubdsP7cJf5TDUKn93FedsL",
+    "expiryMinutes" : 5,
+    "issuer" : "http://localhost:5000"
+  },
   "rabbitmq": {
     "Username": "gwpfouzc",
     "Password": "AKUPxtBs0MCJQop2ZhHDRVr1rXIxLVxK",
