--- a/src/Actio.Services.Identity/appsettings.json
+++ b/src/Actio.Services.Identity/appsettings.json
@@ -10,6 +10,11 @@
     "database" : "Cluster0",
     "seed" : true
   },
+  "jwt" : {
+    "secretKey" : "KwPtBdfhEGxG8YSuYKTCxrAEAKrHrFubdsP7cJf5TDUKn93FedsL",
+    "expiryMinutes" : 5,
+    "issuer" : "http://localhost:5000"
+  },
   "rabbitmq": {
     "Username": "gwpfouzc",
     "Password": "AKUPxtBs0MCJQop2ZhHDRVr1rXIxLVxK",
