Modificacoes, nao funciona o token por causa de horario

--- a/src/Actio.Services.Identity/appsettings.json
+++ b/src/Actio.Services.Identity/appsettings.json
@@ -6,8 +6,8 @@
   },
   "AllowedHosts": "*",
   "mongo" : {
-    "connectionString" : "mongodb+srv://app:96FE7jMbwu8DlPvV@cluster0-pv66d.mongodb.net/test?retryWrites=true",
-    "database" : "Cluster0",
+    "connectionString" : "mongodb://localhost:27017",
+    "database" : "db-identity",
     "seed" : true
   },
   "jwt" : {
