--- a/src/Actio.Api/appsettings.json
+++ b/src/Actio.Api/appsettings.json
@@ -8,7 +8,8 @@
   "jwt" : {
     "secretKey" : "KwPtBdfhEGxG8YSuYKTCxrAEAKrHrFubdsP7cJf5TDUKn93FedsL",
     "expiryMinutes" : 5,
-    "issuer" : "http://localhost:5000"
+    "issuer" : "http://localhost:5000",
+    "audience" : "AudienceTest"
   },
   "rabbitmq": {
     "Username": "gwpfouzc",
