--- a/src/Actio.Services.Identity/appsettings.json
+++ b/src/Actio.Services.Identity/appsettings.json
@@ -6,14 +6,15 @@
   },
   "AllowedHosts": "*",
   "mongo" : {
-    "connectionString" : "mongodb://localhost:27017",
-    "database" : "db-identity",
+    "connectionString" : "mongodb+srv://app:96FE7jMbwu8DlPvV@cluster0-pv66d.mongodb.net/test?retryWrites=true",
+    "database" : "Cluster0",
     "seed" : true
   },
   "jwt" : {
     "secretKey" : "KwPtBdfhEGxG8YSuYKTCxrAEAKrHrFubdsP7cJf5TDUKn93FedsL",
     "expiryMinutes" : 5,
-    "issuer" : "http://localhost:5000"
+    "issuer" : "http://localhost:5000",
+    "audience" : "AudienceTest"
   },
   "rabbitmq": {
     "Username": "gwpfouzc",
