ajuste connection string mongo

--- a/src/Actio.Services.Activities/appsettings.json
+++ b/src/Actio.Services.Activities/appsettings.json
@@ -7,8 +7,8 @@
   "AllowedHosts": "*",
   "pass" : "96FE7jMbwu8DlPvV",
   "mongo" : {
-    "connectionString" : "mongodb://localhost:27017",
-    "database" : "db-activity",
+    "connectionString" : "mongodb+srv://app:96FE7jMbwu8DlPvV@cluster0-pv66d.mongodb.net/test?retryWrites=true",
+    "database" : "Cluster0",
     "seed" : true
   },
   "rabbitmq": {
