--- a/src/Actio.Api/appsettings.json
+++ b/src/Actio.Api/appsettings.json
@@ -11,6 +11,11 @@
     "issuer" : "http://localhost:5000",
     "audience" : "AudienceTest"
   },
+  "mongo" : {
+    "connectionString" : "mongodb+srv://app:96FE7jMbwu8DlPvV@cluster0-pv66d.mongodb.net/test?retryWrites=true",
+    "database" : "Cluster0",
+    "seed" : false
+  },
   "rabbitmq": {
     "Username": "gwpfouzc",
     "Password": "AKUPxtBs0MCJQop2ZhHDRVr1rXIxLVxK",
