add support a docker

--- a/src/Actio.Api/Actio.Api.csproj
+++ b/src/Actio.Api/Actio.Api.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+<!-- Isso serve para o docker baixar a imagem com o runtime do aspnet core -->
+  <PropertyGroup>
+    <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
+  </PropertyGroup>
+
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
