--- a/src/Actio.Api/appsettings.json
+++ b/src/Actio.Api/appsettings.json
@@ -6,19 +6,19 @@
   },
   "AllowedHosts": "*",
   "jwt" : {
-    "secretKey" : "KwPtBdfhEGxG8YSuYKTCxrAEAKrHrFubdsP7cJf5TDUKn93FedsL",
+    "secretKey" : "-",
     "expiryMinutes" : 5,
     "issuer" : "http://localhost:5000",
     "audience" : "AudienceTest"
   },
   "mongo" : {
-    "connectionString" : "mongodb+srv://app:96FE7jMbwu8DlPvV@cluster0-pv66d.mongodb.net/test?retryWrites=true",
+    "connectionString" : "-",
     "database" : "Cluster0",
     "seed" : false
   },
   "rabbitmq": {
-    "Username": "gwpfouzc",
-    "Password": "AKUPxtBs0MCJQop2ZhHDRVr1rXIxLVxK",
+    "Username": "-",
+    "Password": "-",
     "VirtualHost": "gwpfouzc",
     "Port": 5672,
     "Hostnames": ["chimpanzee.rmq.cloudamqp.com"],
