--- a/src/Actio.Services.Activities/appsettings.json
+++ b/src/Actio.Services.Activities/appsettings.json
@@ -5,15 +5,15 @@
     }
   },
   "AllowedHosts": "*",
-  "pass" : "96FE7jMbwu8DlPvV",
+  "pass" : "-",
   "mongo" : {
-    "connectionString" : "mongodb+srv://app:96FE7jMbwu8DlPvV@cluster0-pv66d.mongodb.net/test?retryWrites=true",
+    "connectionString" : "-",
     "database" : "Cluster0",
     "seed" : true
   },
   "rabbitmq": {
-    "Username": "gwpfouzc",
-    "Password": "AKUPxtBs0MCJQop2ZhHDRVr1rXIxLVxK",
+    "Username": "-",
+    "Password": "-",
     "VirtualHost": "gwpfouzc",
     "Port": 5672,
     "Hostnames": ["chimpanzee.rmq.cloudamqp.com"],
